--- a/HW1123/12_譚玥湄/CH09.04_Q04-06.md
+++ b/HW1123/12_譚玥湄/CH09.04_Q04-06.md
@@ -6,57 +6,10 @@ found using the p-value approach? Should they?
 6. Seventy-two successes in a random sample of n = 120. You wish to show that p > .5.  
 
 ----
-To compare the p-value and rejection region approaches, we calculate the p-values for each hypothesis test and assess whether the conclusions align. The steps are as follows:
+4. (1) H0:p=.3. Ha :p<.3 (2) set α =.05 (3) Zstat = (p^- p)/( √(p*(1-p)/n )) , zstat =(0.297-0.3)/√((0.3*0.7)/100 )≈ -1.45 (4) Find the p-value: (z<-1.45) ≈0.0735 (5) Since P-value 0.0735 >α =0.05, don’t reject H0  (6) there is insufficient evidence to support that P < 0.3.
+5. 
+6. (2) H0:p=.4. Ha :p<>0.4 (2) set α =.05 (3) Zstat = (p^- p)/( √(p*(1-p)/n )) , zstat =(0.3779-0.4)/√((0.4*0.6)/100 )≈ -1.68 (4) Find the p-value: (z<-1.68) ≈0.093 (5) Since P-value 0.093 >α =0.05, don’t reject H0  (6) there is insufficient evidence to support that p<>0.4.
+7. 
+8. (3) H0:p=.5 Ha :p>0.5 (2) set α =.05 (3) Zstat = (p^- p)/( √(p*(1-p)/n )) ,zstat =(0.6-0.5)/√((0.5*0.5)/120 )≈ 2.191 (4) Find the p-value: (z<-2.191)=1-0.9857=0.0143 (5) Since P-value 0.0143 <α =0.05, reject H0  (6) there is sufficient evidence to support that P > 0.5.
 
-To calculate the p-values for each hypothesis test and compare the conclusions with those based on a fixed rejection region, let's go through each test step by step:
-Test 4: n=1000,x=279,p<0.3n = 1000, x = 279, p < 0.3n=1000,x=279,p<0.3
-Step 1: Define the hypotheses
-•	H0:p=0.3H_0: p = 0.3H0:p=0.3 (null hypothesis)
-•	Ha:p<0.3H_a: p < 0.3Ha:p<0.3 (alternative hypothesis)
-Step 2: Calculate the test statistic
-For a hypothesis test about a proportion, the test statistic zzz is calculated as:
-z=p^−p0p0(1−p0)nz = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0(1 - p_0)}{n}}}z=np0(1−p0)p^−p0
-Where:
-•	p^=xn=2791000=0.279\hat{p} = \frac{x}{n} = \frac{279}{1000} = 0.279p^=nx=1000279=0.279,
-•	p0=0.3p_0 = 0.3p0=0.3,
-•	n=1000n = 1000n=1000.
-Substitute the values into the formula:
-z=0.279−0.30.3(1−0.3)1000=−0.0210.211000=−0.0210.01449≈−1.45z = \frac{0.279 - 0.3}{\sqrt{\frac{0.3(1 - 0.3)}{1000}}} = \frac{-0.021}{\sqrt{\frac{0.21}{1000}}} = \frac{-0.021}{0.01449} \approx -1.45z=10000.3(1−0.3)0.279−0.3=10000.21−0.021=0.01449−0.021≈−1.45
-Step 3: Calculate the p-value
-For a one-tailed test with z=−1.45z = -1.45z=−1.45, the p-value is the probability of observing a test statistic less than −1.45-1.45−1.45 under the standard normal distribution. Using a standard normal table or calculator:
-p-value=P(Z<−1.45)≈0.0735\text{p-value} = P(Z < -1.45) \approx 0.0735p-value=P(Z<−1.45)≈0.0735
-Step 4: Conclusion based on p-value and rejection region
-•	Rejection region approach: For a significance level of α=0.05\alpha = 0.05α=0.05, the critical value for a one-tailed test is z=−1.645z = -1.645z=−1.645. Since z=−1.45>−1.645z = -1.45 > -1.645z=−1.45>−1.645, we fail to reject H0H_0H0.
-•	p-value approach: The p-value of 0.0735 is greater than 0.05, so we fail to reject H0H_0H0.
-Conclusion: The conclusions from both approaches (rejection region and p-value) agree: we fail to reject the null hypothesis.
-________________________________________
-Test 5: n=1400,x=529,p≠0.4n = 1400, x = 529, p \neq 0.4n=1400,x=529,p=0.4
-Step 1: Define the hypotheses
-•	H0:p=0.4H_0: p = 0.4H0:p=0.4 (null hypothesis)
-•	Ha:p≠0.4H_a: p \neq 0.4Ha:p=0.4 (two-tailed test)
-Step 2: Calculate the test statistic
-p^=xn=5291400≈0.3779\hat{p} = \frac{x}{n} = \frac{529}{1400} \approx 0.3779p^=nx=1400529≈0.3779,
-z=p^−p0p0(1−p0)n=0.3779−0.40.4(1−0.4)1400=−0.02210.241400=−0.02210.0127≈−1.74z = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0(1 - p_0)}{n}}} = \frac{0.3779 - 0.4}{\sqrt{\frac{0.4(1 - 0.4)}{1400}}} = \frac{-0.0221}{\sqrt{\frac{0.24}{1400}}} = \frac{-0.0221}{0.0127} \approx -1.74z=np0(1−p0)p^−p0=14000.4(1−0.4)0.3779−0.4=14000.24−0.0221=0.0127−0.0221≈−1.74
-Step 3: Calculate the p-value
-For a two-tailed test with z=−1.74z = -1.74z=−1.74, the p-value is:
-p-value=2×P(Z<−1.74)≈2×0.0409=0.0818\text{p-value} = 2 \times P(Z < -1.74) \approx 2 \times 0.0409 = 0.0818p-value=2×P(Z<−1.74)≈2×0.0409=0.0818
-Step 4: Conclusion based on p-value and rejection region
-•	Rejection region approach: For a two-tailed test with α=0.05\alpha = 0.05α=0.05, the critical values are z=±1.96z = \pm 1.96z=±1.96. Since −1.74-1.74−1.74 does not fall outside the rejection region (−1.96<−1.74<1.96-1.96 < -1.74 < 1.96−1.96<−1.74<1.96), we fail to reject H0H_0H0.
-•	p-value approach: The p-value of 0.0818 is greater than 0.05, so we fail to reject H0H_0H0.
-Conclusion: The conclusions from both approaches agree: we fail to reject the null hypothesis.
-________________________________________
-Test 6: n=120,x=72,p>0.5n = 120, x = 72, p > 0.5n=120,x=72,p>0.5
-Step 1: Define the hypotheses
-•	H0:p=0.5H_0: p = 0.5H0:p=0.5 (null hypothesis)
-•	Ha:p>0.5H_a: p > 0.5Ha:p>0.5 (one-tailed test)
-Step 2: Calculate the test statistic
-p^=xn=72120=0.6\hat{p} = \frac{x}{n} = \frac{72}{120} = 0.6p^=nx=12072=0.6,
-z=p^−p0p0(1−p0)n=0.6−0.50.5(1−0.5)120=0.10.25120=0.10.0457≈2.19z = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0(1 - p_0)}{n}}} = \frac{0.6 - 0.5}{\sqrt{\frac{0.5(1 - 0.5)}{120}}} = \frac{0.1}{\sqrt{\frac{0.25}{120}}} = \frac{0.1}{0.0457} \approx 2.19z=np0(1−p0)p^−p0=1200.5(1−0.5)0.6−0.5=1200.250.1=0.04570.1≈2.19
-Step 3: Calculate the p-value
-For a one-tailed test with z=2.19z = 2.19z=2.19, the p-value is:
-p-value=P(Z>2.19)≈1−0.9857=0.0143\text{p-value} = P(Z > 2.19) \approx 1 - 0.9857 = 0.0143p-value=P(Z>2.19)≈1−0.9857=0.0143
-Step 4: Conclusion based on p-value and rejection region
-•	Rejection region approach: For a one-tailed test with α=0.05\alpha = 0.05α=0.05, the critical value is z=1.645z = 1.645z=1.645. Since z=2.19>1.645z = 2.19 > 1.645z=2.19>1.645, we reject H0H_0H0.
-•	p-value approach: The p-value of 0.0143 is less than 0.05, so we reject H0H_0H0.
-Conclusion: The conclusions from both approaches agree: we reject the null hypothesis.
 
