--- a/HW1123/12_譚玥湄/CH09.04_Q10.md
+++ b/HW1123/12_譚玥湄/CH09.04_Q10.md
@@ -6,13 +6,14 @@ b. Calculate the test statistic and its p-value. Use the p-value to evaluate the
 
 ---
 We will perform a hypothesis test to evaluate the geneticist's claim that 75% of the offspring from the cross will have red flowers. Here's the detailed solution:
-________________________________________
-(1) H0 : p = 0.75 Ha : p ≠ 0.75 
-(2) set α = 0.01 (3)計算檢定統計量: p^＝58/100=0.58 , Z = (p^- p)/( √(p*(1-p)/n )) = 0.58−0.75/( √(0.75*0.25/100 ))= -3.9260
-(4) P-Value = 2*p(Z>|-3.93|)=0 
-(5) P-value 0 < α = 0.05，故拒絕虛無假設，有證據顯示p ≠ 0.75，
-(6)即意味著樣本的紅花比例與遺傳學家所聲稱的75%顯著不同。
-________________________________________
-Conclusion
+
+(1) H0 : p = 0.75 Ha : p ≠ 0.75  
+(2) set α = 0.01  
+(3)計算檢定統計量: p^＝58/100=0.58 , Z = (p^- p)/( √(p*(1-p)/n )) = 0.58−0.75/( √(0.75*0.25/100 ))= -3.9260  
+(4) P-Value = 2*p(Z>|-3.93|)=0  
+(5) P-value 0 < α = 0.05，故拒絕虛無假設，有證據顯示p ≠ 0.75，  
+(6)即意味著樣本的紅花比例與遺傳學家所聲稱的75%顯著不同。  
+
+Conclusion  
 Since the p-value is less than 0.010.010.01, we reject the null hypothesis (H0H_0H0) at the 1% significance level. This means the data provide strong evidence to refute the geneticist's claim that 75% of the offspring have red flowers.
 
