--- a/HW1123/12_譚玥湄/CH10.02_Q20.md
+++ b/HW1123/12_譚玥湄/CH10.02_Q20.md
@@ -1,41 +1,9 @@
 20. Cerebral Blood Flow Cerebral blood flow (CBF) in the brains of healthy people is normally distributed with a mean of 74. A random sample of 25 stroke patients resulted in an average CBF of x =69.7 with a standard deviation of s = 16. Test the hypothesis that the average CBF for stroke patients is different from that of healthy people using a =.05.
 
 ---
-已知CBF呈現常態分布，母體平均值為74
-隨機實驗25名腦中風病人，樣本平均值為69.7， 標準差為16
-
-選擇 $\alpha = 0.05 $, 做假設檢定
-- $\mu = 74 $
-- $\bar{x}$ = 69.7
-- s = 16
-- n = 25
-- $\alpha = 0.05 $
-
-#### Step 1 定義 $H_0$ 及 $H_1$　 
-$H_0$ : $\mu$ = 74  
-$H_a$ : $\mu\ne$ 74  
-
-#### Step 2 選擇Level of significance  
-$\alpha = 0.05 $
-
-#### Step 3 選擇檢定統計量  
-因母體為常態分配，且樣本數小於30，故使用 $t = \frac{\bar{x} - \mu}{\frac{s}{\sqrt{n}}}$
-
-#### Step 4 制定決策規則  
-因平均值可能大於74或小於74，將 $\alpha = 0.05$ 平均分配在雙尾，為 $\alpha/2 = 0.025$
-
-![image](https://github.com/user-attachments/assets/84bbead8-ac7a-4c11-acd3-60abdc076f64)
-
-自由度為n -1 = 25-1 = 24  
-根據 $\alpha = 0.05$ 及自由度 = 24，從 t 分布表查Critical Value為 2.064
-拒絕域：{t: t > 2.064, t < -2.064}
-
-<img width="378" alt="image" src="https://github.com/user-attachments/assets/30b4611d-33f1-4f54-911a-10e469e165e7">
-
-#### Step 5 計算檢定統計量  
-$t^{*}$ = $\frac{(69.7-74)}{16/ \sqrt{25}}$ = -1.3438
-
-#### Step 6 結論
-因統計量未落在拒絕域中，因此無法拒絕 $H_0$
-腦中風病人的CBF與一般人無差異
-
+(1) H0 : μ = 74 , Ha : μ≠74  
+(2)set α=0.05   
+(3)計算檢定統計量,因母體為常態分配，且樣本數小於30，故使用 t=¯((x)−μ)/ (s/√(n) ) , t∗ = (69.7−74)/(16/5) = -1.3438   
+(5) 自由度為n -1 = 25-1 = 24 ,,根據 α=0.05 及自由度 = 24，從 t 分布表查Critical Value為 2.064  拒絕域：{t: t > 2.064, t < -2.064}  
+(5)因統計量未落在拒絕域中，t* =-1.3438 > -2.064 , 因此無法拒絕 H0 
+(6)結論 因此無法拒絕 H0 腦中風病人的CBF與一般人無差異
