--- a/HW1207/HW1207Q10.md
+++ b/HW1207/HW1207Q10.md
@@ -15,14 +15,15 @@
 >
 ### b.資料是否提供充分證據顯示 x 和 y 存在線性關係？使用 t-統計量並在 5% 顯著水準下進行檢定。
 >
->$H_{0}: \beta = 0$  
->$H_{1}: \beta \neq 0$
+>$H_{0}: \beta = 0$  （無線性關係）
+>
+>$H_{1}: \beta \neq 0$  （存在線性關係）
 >
 >$\alpha$=0.05
 >
 ><img width="372" alt="image" src="https://github.com/user-attachments/assets/b9e307c1-7706-44ba-af45-37e73cc5e82b" />
 >
->$t_{STAT}$ = 20.436 > 2.571，落入拒絕域，因此拒絕 $H_{0}$。
+>$t_{STAT}$ = 20.436 > 2.571，落入拒絕域，因此拒絕 $H_{0}$，即有顯著證據證明x和y有線性關係
 >
 ><img width="230" alt="image" src="https://github.com/user-attachments/assets/52e51c7e-d78b-4613-a583-ea092da557cb" />
 
