--- a/HW1207/08_蕭宇辰/CH12.03_Q05.md
+++ b/HW1207/08_蕭宇辰/CH12.03_Q05.md
@@ -24,7 +24,7 @@ RR = {t: t $\le$ -5.841 or t $\ge$ 5.841  }
 
 計算統計量
 
-$t_{stat}$ = $(\hat{b}-b_0)$ / $\sqrt{\frac{MSE}{S_{xx}}}$ = (1.2-0) / $\sqrt{\frac{0.5333}{10}}$ = 1.2 / 0.2309 = 5.1963
+$t_{stat}$ = $(b_0-0)$ / $\sqrt{\frac{MSE}{S_{xx}}}$ = (1.2-0) / $\sqrt{\frac{0.5333}{10}}$ = 1.2 / 0.2309 = 5.1963
 
 ( SST = 16， SSR = 14.4 ，SSE = SST-SSR =1.6， MSE= SSE /(n-2) = 1.6 / 3 = 0.5333 )
 
