--- a/HW1207/08_蕭宇辰/CH12.03_Q05.md
+++ b/HW1207/08_蕭宇辰/CH12.03_Q05.md
@@ -34,7 +34,7 @@ $t_{stat}$ = $(b_0-0)$ / $\sqrt{\frac{MSE}{S_{xx}}}$ = (1.2-0) / $\sqrt{\frac{0.
 建構回歸斜率的 99% 信賴區間。解釋「99% 信心水準」的含義。
 ---
 
-99%信賴區間為 b $\pm t_{\alpha / 2} * \sqrt{\frac{MSE}{S_{xx}}} $ 
+99%信賴區間為 b $\pm$ $t_{\alpha / 2} * \sqrt{\frac{MSE}{S_{xx}}} $ 
 
 信賴區間為 [1.2- 0.2309*5.84 , 1.2+0.2309*5.84 ] = [-0.1485, 2.5485]
 
