--- a/HW1207/13_陳峻毅/CH12.05_Q09_Q10.md
+++ b/HW1207/13_陳峻毅/CH12.05_Q09_Q10.md
@@ -1,7 +1,7 @@
 ![394375198-5571ce5c-e724-4ce4-9a93-35ba7e1685a4](https://github.com/user-attachments/assets/043067b6-3b6f-4a35-9bc2-9f7e3dabadeb)
 ![394375251-baa84d70-ff42-4b3b-ae95-e60727e165dc](https://github.com/user-attachments/assets/2991c409-7fe7-4380-b60f-5309a7ff9ab0)
 
-### 9. 計算 $ x = 2 $ 時 $ y $ 平均值的 95% 信賴區間
+### 9. 計算 x =  時 y 平均值的 95% 信賴區間
 
 從提供的 MINITAB 輸出中，當 x = 2 時：
 - 預測值 (Fit) = 4.88571
