--- a/HW1207/12_譚玥湄/CH12.01_Q22.md
+++ b/HW1207/12_譚玥湄/CH12.01_Q22.md
@@ -5,3 +5,10 @@ a. Draw a scatterplot for armspan and height. Use the same scale on both the hor
 b. If da Vinci is correct, and a person’s armspan is roughly the same as the person’s height, what should the slope of the regression line be?  
 c. Calculate the regression line for predicting height based on a person’s armspan. Does the value of the slope b confirm your conclusions in part b?  
 d. If a person has an armspan of 157 centimeters, what would you predict the person’s height to be?  
+
+---
+
+a. Draw a scatterplot for armspan and height. 令臂展為x，身高為y，由散佈圖可看出，臂展和身高為正相關
+b. If da Vinci is correct, and臂展大約等於身高, what is the slope? 若臂展大約等於身高，則回歸線的斜率應為1 (y=x)
+c. Calculate the regression line for predicting height based on a person’s armspan. Does the value of the slope b confirm your conclusions in part b?
+Sxx = 568 ,Sxy = 468,b = Sxy / Sxx = 0.8239，a = 29.6003   代入 y= a+bx ，得 y^ = 29.6003 + 0.8239 * x
