--- a/HW1207/12_譚玥湄/CH12.02_Q10.md
+++ b/HW1207/12_譚玥湄/CH12.02_Q10.md
@@ -1,1 +1,5 @@
 
+a. If the researcher thinks that BMI is a function of income, which of the two 
+variables is the independent variable x and which is the dependent variable y? 自變數x收入，依變數y為BMI
+b. Find the least-squares line relating BMI to income. Sxx = 2730.208，Sxy = -402.85，得b = -0.1476 a= 32.9144.  y^ = 32.9144 - 0.1476 *x
+c. Construct the ANOVA table. dfreg = 1 ,dferror = n-k = 4, dftotal = n-1 = 5 , SST = ∑(yi−¯y)2 = ∑yi2−(∑yi)2/n = 72.22 ,SSR = ∑(yi^−¯y)2 = ∑yi2−(∑yi)2/n,S2xy / Sxx = 59.4417 , SSE = SST - SSR = 72.22-59.4417=12.7783 , MSR = SSR / dfreg=59.4417/1 =59.4417 ,MSE = SSE / dferror=12.7783 / 4 =3.1946
