--- a/HW1207/HW1207Q04.md
+++ b/HW1207/HW1207Q04.md
@@ -43,7 +43,7 @@ MSR = SSR / $df_{reg}$ = 14.4 / 1 =14.4
 MSE = SSE / $df_{error}$ = 1.6 / 3 = 0.5333  
 
 3. The ANOVA table for the given data points is:
-
+ANOVA（Analysis of Variance，變異數分析）是一種統計方法，用於比較多組數據之間的平均數是否有顯著差異。它是一種廣泛應用於實驗設計、行為科學和經濟學等領域的檢定方法。 3. The ANOVA table for the given data points is:
 | Source  | DF    | SS | MS |
 | ----  | --    | -- | -- |
 | Regression   | 1     | 14.4  | 14.4  |
