--- a/HW1207/HW1207Q04.md
+++ b/HW1207/HW1207Q04.md
@@ -46,8 +46,9 @@ MSE = SSE / $df_{error}$ = 1.6 / 3 = 0.5333
 
 3. The ANOVA table for the given data points is:
 
+
 | Source  | DF    | SS | MS |
 | ----  | --    | -- | -- |
-| Regression   | 1     | 14.4  | 14.4  |
-| Error (Residual) | 3     | 1.6 | 0.5333 |
+| Regression組間（因素影響)   | 1     | 14.4  | 14.4  |
+| Error (Residual)組內（誤差) | 3     | 1.6 | 0.5333 |
 | Tatol | 4     | 16 |
