--- a/HW1207/HW1207Q04.md
+++ b/HW1207/HW1207Q04.md
@@ -49,6 +49,6 @@ MSE = SSE / $df_{error}$ = 1.6 / 3 = 0.5333
 
 | Source  | DF    | SS | MS |
 | ----  | --    | -- | -- |
-| Regression組間（因素影響)   | 1     | 14.4  | 14.4  |
-| Error (Residual)組內（誤差) | 3     | 1.6 | 0.5333 |
+| Regression 組間（因素影響)   | 1     | 14.4  | 14.4  |
+| Residual(Error)組內（誤差) | 3     | 1.6 | 0.5333 |
 | Tatol | 4     | 16 |
