--- a/HW1207/HW1207Q04.md
+++ b/HW1207/HW1207Q04.md
@@ -43,7 +43,7 @@ SSE = 1.6
 SST = SST + SSR = 14.4 + 1.6 = 16  
 MSR = SSR / $df_{reg}$ = 14.4 / 1 =14.4  
 MSE = SSE / $df_{error}$ = 1.6 / 3 = 0.5333  
-
+F = MSR/MSE
 3. The ANOVA table for the given data points is:
 
 
