--- a/HW1207/HW1207Q04.md
+++ b/HW1207/HW1207Q04.md
@@ -43,12 +43,12 @@ SSE = 1.6
 SST = SST + SSR = 14.4 + 1.6 = 16  
 MSR = SSR / $df_{reg}$ = 14.4 / 1 =14.4  
 MSE = SSE / $df_{error}$ = 1.6 / 3 = 0.5333  
-F = MSR/MSE
+F = MSR/MSE =27
 3. The ANOVA table for the given data points is:
 
 
-| Source  | DF    | SS | MS |
-| ----  | --    | -- | -- |
-| Regression 組間（因素影響)   | 1     | 14.4  | 14.4  |
-| Error 組內（誤差) | 3     | 1.6 | 0.5333 |
-| Tatol | 4     | 16 |
+| Source  | DF    | SS | MS | F
+| ----  | --    | -- | -- |27
+| Regression 組間（因素影響)   | 1     | 14.4  | 14.4  |  |
+| Error 組內（誤差) | 3     | 1.6 | 0.5333 ||
+| Tatol | 4     | 16 ||
