--- a/HW1207/HW1207Q04.md
+++ b/HW1207/HW1207Q04.md
@@ -48,7 +48,7 @@ F = MSR/MSE =27
 
 
 | Source  | DF    | SS | MS | F |
-| ----  | --    | -- | -- |27
-| Regression 組間（因素影響)   | 1     | 14.4  | 14.4  |  |
+| ----  | --    | -- | -- |-- |
+| Regression 組間（因素影響)   | 1     | 14.4  | 14.4  | 27 |
 | Error 組內（誤差) | 3     | 1.6 | 0.5333 ||
 | Tatol | 4     | 16 ||
