--- a/HW1207/12_譚玥湄/CH12.02_Q06.md
+++ b/HW1207/12_譚玥湄/CH12.02_Q06.md
@@ -35,7 +35,7 @@ $df_{reg}$ = k-1 = 1
 $df_{error}$ = n-k = 3  
 $df_{total}$ = $df_{reg}$ + $df_{error}$  = 4  
 SSR =  $\sum{(\hat{y_i}-\bar{y})^2}$ = $\sum{\hat{y_i}^2}-(\sum{y_i})^2/n$ =  $S_{xy}^2$ / $S_{xx}$ = 59.4 - $15^2$ / 5 = 14.4  
-SSE =  $\sum{({y_i}-\hat{y})^2}$ = $S_{yy}$ / $S_{xy}^2/S_{xx}$  ] = 1.6  
+SSE =  $\sum{({y_i}-\hat{y})^2}$ = $S_{yy}$ - ($(S_{xy})^2 / S_{xx}$)  ] = 1.6  
 SST = SST + SSR = 14.4 + 1.6 = 16  or SST = $S_{yy}$ = $\sum{(y_i-\bar{y})^2}$ =  $\sum{y_i^2}-(\sum{y_i})^2/n$ = 61 - 15*15/5 = 16  
 MSR = SSR / $df_{reg}$ = 14.4 / 1 =14.4  
 MSE = SSE / $df_{error}$ = 1.6 / 3 = 0.5333  
