--- a/HW1207/HW1207Q11.md
+++ b/HW1207/HW1207Q11.md
@@ -1,4 +1,4 @@
-**CH12.05_Q3.Q5** $\textcolor{orange}{黃家鈞}$
+7**CH12.05_Q3.Q5** $\textcolor{orange}{黃家鈞}$
 
 ![image](https://github.com/user-attachments/assets/e408d551-5732-41c3-a89b-d8ffa02ce67b)
 
@@ -32,7 +32,7 @@ $= \sqrt{\frac{1}{10} + \frac{(5 - 5.9)^2}{48.9}}$
 
 $= \sqrt{0.1 + \frac{0.81}{48.9}} = \sqrt{0.1 + 0.01656} = \sqrt{0.11656}\approx 0.3414$
 
-5. 誤差範圍： $t \cdot \sqrt{MSE} \cdot SE = 1.860 \times 1.732 \times 0.3414 \approx 1.0998$
+5. 誤差範圍： $t_{\frac{\alpha}{2} ,(n-2)} \cdot \sqrt{MSE} \cdot SE = 1.860 \times 1.732 \times 0.3414 \approx 1.0998$
 
 6. 估計平均值： $x_0 = 5 , 代入\hat{y} = 0.074 + 0.46 \times 5 = 2.374$ 
 
