更新 HW1207Q11.md

--- a/HW1207/HW1207Q11.md
+++ b/HW1207/HW1207Q11.md
@@ -26,7 +26,7 @@ Ans:
 
 4. 標準誤SE：
 
-$\sqrt{\frac{1}{n} + \frac{(x_0 - \bar{x})^2}{\sum (x_i - \bar{x})^2}}$
+$\sqrt{\frac{1}{n} + \S_{xx}}{\sum (x_i - \bar{x})^2}}$
    
 $= \sqrt{\frac{1}{10} + \frac{(5 - 5.9)^2}{48.9}}$
 
@@ -53,7 +53,7 @@ Ans:
 前題計算中 $\frac{1}{n}+\frac{(x_0-\bar{x})^2}{\sum (x_i-\bar{x})^2}=0.11656$  
 加入 1 後： $1+0.11656=1.11656 \implies \sqrt{1.11656}=1.0567$
 
-誤差範圍： $t \cdot \sqrt{MSE} \cdot SE = 1.860 \times 1.732 \times 1.0567 \approx 3.404$
+誤差範圍： $t_{\alpha}{2} ,(n-2)} \cdot \sqrt{MSE} \cdot SE = 1.860 \times 1.732 \times 1.0567 \approx 3.404$
 
 **預測區間：** $2.374 \pm 3.404 = [-1.030\, 5.778]$(比平均值的信賴區間[1.274, 3.474]寬)
 
