--- a/HW1207/HW1207Q11.md
+++ b/HW1207/HW1207Q11.md
@@ -26,7 +26,7 @@ Ans:
 
 4. 標準誤SE：
 
-$\sqrt{\frac{1}{n} + \S_{xx}}{\sum (x_i - \bar{x})^2}}$
+$\sqrt{\frac{1}{n} + \frac{(x_0-\bar{x})^2}{S_{xx}})} $
    
 $= \sqrt{\frac{1}{10} + \frac{(5 - 5.9)^2}{48.9}}$
 
