--- a/HW1207/HW1207Q11.md
+++ b/HW1207/HW1207Q11.md
@@ -48,9 +48,9 @@ Ans:
 
 相同資料： $n=10, MSE=1.732, t_{8,0.05}=1.860, \hat{y}_0=2.374$ (同題3)
 
-預測區間的公式在標準誤項內多了「+1」： $\sqrt{1 + \frac{1}{n} + \frac{(x_0-\bar{x})^2}{\sum (x_i-\bar{x})^2}}$
+預測區間的公式在標準誤項內多了「+1」： $\sqrt{1 + \frac{1}{n} + \frac{(x_0-\bar{x})^2}{S_{xx}})} $
 
-前題計算中 $\frac{1}{n}+\frac{(x_0-\bar{x})^2}{\sum (x_i-\bar{x})^2}=0.11656$  
+前題計算中 $\frac{1}{n} + \frac{(x_0-\bar{x})^2}{S_{xx}}=0.11656$  
 加入 1 後： $1+0.11656=1.11656 \implies \sqrt{1.11656}=1.0567$
 
 誤差範圍： $t_{\frac{\alpha}{2} ,(n-2)} \cdot \sqrt{MSE} \cdot SE = 1.860 \times 1.732 \times 1.0567 \approx 3.404$
