--- a/HW1109/15_林秀鴻/CH07.05_Q31.md
+++ b/HW1109/15_林秀鴻/CH07.05_Q31.md
@@ -5,7 +5,7 @@ Sample size = n =100
 
 a. $\hat{p}$ 的分佈將“回收”與地球日關聯的美國人，是否具有近似的常態分佈？ 如果是，請問它的平均值和標準差？
 
-### a. Dose the distribution of $\hat{p}$ have an approximate normal distribution? If so, what is the mean and standard deviation? 
+### a. Does the distribution of $\hat{p}$ have an approximate normal distribution? If so, what is the mean and standard deviation? 
 
 The Central Limit Theorem says: when $n$ is large $( n \geq 30)$:
 
