--- a/HW1109/15_林秀鴻/CH08.02_Q26.md
+++ b/HW1109/15_林秀鴻/CH08.02_Q26.md
@@ -1,11 +1,65 @@
 
-![CH8 02_Q26](https://github.com/user-attachments/assets/49ba0a1c-9b8d-40e9-a569-7be8efd256f6)
+![圖片](https://github.com/user-attachments/assets/57bb90c3-1ce1-478f-9617-1b55a36f0e54)
 
-### 依題意，找出P的點估計值，即接受康復技術的罪犯，在出獄後至少 3 年後，無犯罪生活的機率。
 
-依CLT表示 : $$\frac{\hat{p}-p}{\sqrt{\frac{\hat{p}*(1-\hat{p})}{n}}}$$ -> N(0,1) as n→∞ 
+recidivism[rɪˈsɪdɪvɪzəm]: 累犯/再犯\
+recidivism rate: 累犯率\
+rehabilitation: 康復/改過自新
 
-$$\hat{p}$$ = $$\frac{79}{121}$$ = 0.6529
+### Given:
+- Number of individuals who pursued crime-free lives: x = 79 
+- Total number of individuals:  n = 121 
 
-假設95%的信賴水準，Margin of Error =  $$\pm$$ 1.96 * $${\sqrt{\frac{\hat{p}*(1-\hat{p})}{n}}}$$ = $$\pm$$ 1.96 * 0.0433 = $$\pm$$ 0.0849
+### 1. **Point Estimate for \( p \):**
+$\hat{p} = \frac{x}{n} = \frac{79}{121}$\
+$\hat{p} = 0.6529 \text{ (approximately } 0.653 \text{)}$
+
+### 2. **Margin of Error:**
+The margin of error (ME) is calculated using the formula for a confidence interval for a proportion:
+$ME = Z \cdot \sqrt{\frac{\hat{p}(1 - \hat{p})}{n}}$
+Where:
+- Z : Critical value for the desired confidence level (e.g., $\alpha$=0.05,for 95% confidence, \( Z = 1.96 \).
+- $\hat{p}$: Sample proportion.
+- n : Sample size.
+
+PS: This is derived from the Empirical Rule (68-95-99.7 rule) in statistics:
+
+    68% of data falls within ±1 standard deviation.
+    95% of data falls within ±1.96 standard deviations.
+    99.7% of data falls within ±3 standard deviations.
+
+
+#### Step-by-step calculation:
+1. Calculate $\hat{p}$($1 -\hat{p}$):
+   
+   $\hat{p}(1 - \hat{p}) = 0.6529 \cdot (1 - 0.6529) = 0.6529 \cdot 0.3471 = 0.2267$
+   
+
+2. Divide by n :
+   $\frac{\hat{p}(1 - \hat{p})}{n} = \frac{0.2267}{121} = 0.001874$
+   
+
+3. Take the square root:
+   $\sqrt{\frac{\hat{p}(1 - \hat{p})}{n}} = \sqrt{0.001874} = 0.0433 $
+
+4. Multiply by  Z = 1.96  (for 95% confidence):
+   ME = $1.96 \cdot 0.0433 = 0.0848 \text{ (approximately } 0.085 \text{)}$
+
+---
+
+### Final Answers:
+1. **Point Estimate $\hat{p}$**:  0.653 
+2. **Margin of Error ME **:  0.0848
+
+This means the probability  p  is approximately  0.653 , with a margin of error of  $0.0848 \$.\
+\
+PS:
+The margin of error (±0.085) means that we are reasonably confident (usually at a 95% confidence level if Z=1.96) that the true proportion of convicts (p) who will lead crime-free lives for at least 3 years after prison release lies within the range:\
+$\hat{p}$±ME=0.653±0.085
+
+
+This gives us the confidence interval:
+[0.653−0.085,0.653+0.085]=[0.568,0.738]
+
+reviewed by 黃馨霈 20241209 $\textbf{\textcolor{red}{score: 100}}$
 
