--- a/HW1109/15_林秀鴻/CH08.03_Q09.md
+++ b/HW1109/15_林秀鴻/CH08.03_Q09.md
@@ -1,13 +1,34 @@
 
 
-![CH8 03_Q09](https://github.com/user-attachments/assets/183a4216-2f2d-42b1-a83c-7494c5f1a294)
+![image](https://github.com/user-attachments/assets/63fa32f7-8b70-4783-8ea8-5c8016e8b3bf)  
 
-依CLT表示 : $$\frac{\bar{x}-\mu}{\frac{s}{\sqrt{n}}}$$ -> N (0,1) as n→∞ 
+依據題意, $n=36,\quad \bar x =13.1,\quad  s^2 = 3.42$ ,此樣本資訊下95%的信賴區間為多少?
 
-假設 95% 信賴水準， $$\mu$$ 的信賴區間為 :  
+A(1- $\alpha$)100% Large-Sample Confidence Interval for a Population Mean $\mu$  
 
-[ $$\bar{x}-z_{0.025}\frac{s}{\sqrt{n}}$$ , $$\bar{x}+z_{0.025}\frac{s}{\sqrt{n}}$$ ]
+$\rightarrow$   $\alpha = 0.05$  
 
-= [13.1 - 1.96 * 0.3082 , 13.1 + 1.96* 0.3082 ]
+Point estimator ± $z_{\alpha/2}$ * Standard error of the estimator
 
-= [12.496 , 13.704]
+$\bar{x}±z_{\alpha/2}\frac{\sigma}{\sqrt{n}}$
+
+$= 13.1±z_{0.05/2}\frac{\sqrt{3.42}}{\sqrt{36}}$
+
+$= 13.1±z_{0.025}\frac{\sqrt{3.42}}{\sqrt{36}}$ 
+
+$= 13.1±1.96 * \frac{1.8493}{6}$
+
+$= [13.1-0.6041  ,\quad  13.1+0.6041  ]$  
+
+$= [12.4959 ,\quad  13.7041  ]$
+
+The 95% confidence interval for $\mu$ is from 12.4959 to 13.7041  
+
+In repeated sampling,about 95% intervals constructed this way will cover the true parameter。
+  
+![image](https://github.com/user-attachments/assets/e3fa4fe1-680a-49dc-9d8d-89736037183a)
+![image](https://github.com/user-attachments/assets/2c433333-681a-44c4-8729-e29b55cc9abe)
+
+reviewed by 黃馨霈 20241209 $\textbf{\textcolor{red}{score: 100}}$
+
+
