--- a/HW1207/HW1207Q11.md
+++ b/HW1207/HW1207Q11.md
@@ -26,7 +26,7 @@ Ans:
 
 4. 標準誤SE：
 
-$\sqrt{\frac{1}{n} + \frac{(x_0-\bar{x})^2}{S_{xx}})} $
+$\sqrt{\frac{1}{n} + \frac{(x_0-\bar{x})^2}{S_{xx}}} $
    
 $= \sqrt{\frac{1}{10} + \frac{(5 - 5.9)^2}{48.9}}$
 
@@ -48,7 +48,7 @@ Ans:
 
 相同資料： $n=10, MSE=1.732, t_{8,0.05}=1.860, \hat{y}_0=2.374$ (同題3)
 
-預測區間的公式在標準誤項內多了「+1」： $\sqrt{1 + \frac{1}{n} + \frac{(x_0-\bar{x})^2}{S_{xx}})} $
+預測區間的公式在標準誤項內多了「+1」： $\sqrt{1 + \frac{1}{n} + \frac{(x_0-\bar{x})^2}{S_{xx}}} $
 
 前題計算中 $\frac{1}{n} + \frac{(x_0-\bar{x})^2}{S_{xx}}=0.11656$  
 加入 1 後： $1+0.11656=1.11656 \implies \sqrt{1.11656}=1.0567$
