--- a/HW1207/HW1207Q11.md
+++ b/HW1207/HW1207Q11.md
@@ -59,6 +59,10 @@ Ans:
 
 結論
 
+![image](https://github.com/user-attachments/assets/fb9857d7-331c-422a-abb1-15850556e326)
+
+![image](https://github.com/user-attachments/assets/64cbefb6-3059-4d0a-a5fd-37de79f3d39e)
+
 比較相同信賴水準(90%)與相同 $x_0$時，獨特值的預測區間 (Prediction Interval) 一定比平均值的信賴區間 (Confidence Interval for the Mean Response) 寬。因預測區間除了考慮迴歸線估計的不確定性外（error），還包含獨特值本身的變異性（ε）。
 
 ![image](https://github.com/user-attachments/assets/27d6a7e1-f5b0-478a-b671-38ff4978cc57)
