--- a/HW1207/10_蔡佳媛/CH12.02_Q06_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.02_Q06_10_Cathy.md
@@ -29,9 +29,9 @@ Total SS - SSR = SSE = $16 - 14.4 = 1.6$
 
 ### ANOVA table  
 
-|   Source   |      df     |   SS   |   MS   |  
-|------------|-------------|--------|--------|  
-| Regression |       1     |**14.4**|**14.4**|  
-| Error      | n-2 = **3** | **1.6**|**0.5333**|  
+|   Source   |      df     |   SS   |     MS     |     F     |  
+|------------|-------------|--------|------------|-----------|  
+| Regression |       1     |**14.4**|  **14.4**  |**27.0017**|  
+| Error      | n-2 = **3** | **1.6**| **0.5333** |  
 | Total      | n-1 = **4** |**16**  |  
 
