--- a/HW1207/10_蔡佳媛/CH12.02_Q10_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.02_Q10_10_Cathy.md
@@ -38,9 +38,9 @@ SSR = $\frac{{S_{xy}}^2}{S_{xx}}$ = $\frac{-402.8446^2}{2,730.2244} = 59.4397$
 SSE = Total SS - SSR = $72.22 - 59.4397 = 12.7803$
 
 
-|   Source   |      df     |    SS     |    MS     |  
-|------------|-------------|-----------|-----------|  
-| Regression |       1     |**59.4397**|**59.4397**|  
+|   Source   |      df     |    SS     |    MS     |     F     |  
+|------------|-------------|-----------|-----------|-----------|  
+| Regression |       1     |**59.4397**|**59.4397**|**18.6034**|  
 | Error      | n-2 = **4** |**12.7803**| **3.1951**|  
 | Total      | n-1 = **5** |**72.22**  |  
 
