--- a/HW1207/10_蔡佳媛/CH12.02_Q16_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.02_Q16_10_Cathy.md
@@ -38,9 +38,9 @@ SSR = $\frac{{S_{xy}}^2}{S_{xx}}$ = $\frac{-14^2}{16} = 12.25$
 SSE = Total SS - SSR = $12.5 - 12.25 = 0.25$
 
 
-|   Source   |      df     |   SS    |    MS     |  
-|------------|-------------|---------|-----------|  
-| Regression |       1     |**12.25**|  **12.25**|  
+|   Source   |      df     |   SS    |    MS     |      F     |  
+|------------|-------------|---------|-----------|------------|  
+| Regression |       1     |**12.25**|  **12.25**|**147.0588**|  
 | Error      | n-2 = **3** | **0.25**| **0.0833**|  
 | Total      | n-1 = **4** |**12.5** |  
 
