--- a/HW1207/10_蔡佳媛/CH12.03_Q09_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.03_Q09_10_Cathy.md
@@ -62,9 +62,9 @@ MSE = $\frac{0.0052}{14} = 0.00037142857 \approx 0.00037$
   
 ### ANOVA table  
 
-|   Source   |       df     |     SS    |     MS     |  
-|------------|--------------|-----------|------------|  
-| Regression |       1      | **0.1812**| **0.1812** |  
+|   Source   |       df     |     SS    |     MS     |      F      |  
+|------------|--------------|-----------|------------|-------------|  
+| Regression |       1      | **0.1812**| **0.1812** | **489.7297**|  
 | Error      | n-2 = **14** | **0.0052**| **0.00037**|  
 | Total      | n-1 = **15** | **0.1864**|  
 
