--- a/HW1207/HW1207Q05.md
+++ b/HW1207/HW1207Q05.md
@@ -40,7 +40,7 @@ MSE = SSE / $df_{error}$ = 12.7783 / 4 = 3.1946
 | Error       | 4    | 12.78 | 3.195  |
 | Total       | 5    | 72.22 | —      |
 ---
-## (e) 計算coefficient of determination  (題目未問): 
+## (e) 計算coefficient of determination 做檢測迴歸的軟指標 (題目未問): 
 
 $R^2= \frac{SSR}{Total SS}=\frac{59.44}{72.22}=0.823$
 
