--- a/HW1207/HW1207Q06.md
+++ b/HW1207/HW1207Q06.md
@@ -42,8 +42,8 @@ SSR = $\frac{{S_{xy}}^2}{S_{xx}}$ = $\frac{-14^2}{16} = 12.25$
 SSE = Total SS - SSR = $12.5 - 12.25 = 0.25$
 
 
-|   Source   |df|SS |MS|  
-|------------|:---:|:---:|:---:|  
-| Regression | 1 |12.25| 12.25|  
-| Error      | 3 | 0.25| 0.0833|  
-| Total      | 4 |12.5 |  
+|   Source   |df|SS |MS|F|  
+|------------|:---:|:---:|:---:|:---:|  
+| Regression | 1 |12.25| 12.25|147.0588|  
+| Error      | 3 | 0.25| 0.0833||  
+| Total      | 4 |12.5 ||  
