--- a/HW1207/08_蕭宇辰/CH12.02_Q10.md
+++ b/HW1207/08_蕭宇辰/CH12.02_Q10.md
@@ -29,11 +29,11 @@ least-square line: $\hat{y}$ = 32.9144 - 0.1476 *x
 c. 建構這個線性回歸的 ANOVA 表格。
 ---
 
-|       | DF    | SS | MS |
-| ----  | --    | -- | -- |
-| Reg   | 1     | 59.4417  | 59.4417  |
-| Error | 4     | 12.7783 |3.1946  |
-| Tatol | 5     | 72.22 |
+|       | DF    | SS | MS | F |
+| ----  | --    | -- | -- | |
+| Reg   | 1     | 59.4417  | 59.4417  | 18.6069|
+| Error | 4     | 12.7783 |3.1946  | |
+| Tatol | 5     | 72.22 | |
 
 $df_{reg}$ = 1
 
