--- a/HW1207/06_陳嘉祥/CH12.02_Q10.md
+++ b/HW1207/06_陳嘉祥/CH12.02_Q10.md
@@ -36,11 +36,11 @@ MSE = SSE / $df_{error}$ = 12.7783 / 4 = 3.1946
 ---
 ## (d) ANOVA 表
 
-| Source      | $df$ | $SS$  | $MS$   |
-|-------------|------|-------|--------|
-| Regression  | 1    | 59.44 | 59.44  |
-| Error       | 4    | 12.78 | 3.195  |
-| Total       | 5    | 72.22 | —      |
+| Source      | $df$ | $SS$  | $MS$   | $F$   |
+|-------------|------|-------|--------|--------|
+| Regression  | 1    | 59.44 | 59.44  | 18.604 |
+| Error       | 4    | 12.78 | 3.195  |        |
+| Total       | 5    | 72.22 | —      |        |
 ---
 ## (e) 計算coefficient of determination 做檢測迴歸的軟指標 (題目未問): 
 
