--- a/HW1207/HW1207Q08.md
+++ b/HW1207/HW1207Q08.md
@@ -20,7 +20,7 @@ $R^2 =\frac{SSR}{Total SS}$
 
 $R^2 = \frac{14.4}{16} = 0.9$ = 90% 
 
-## R2 是反應變數變異中由其與一個或多個預測變數的關係所解釋的百分比。一般而言，R2 越大，模型與資料配適得越好。
+## R2 迴歸可解釋的變異佔總變異的比例，R2 越大，模型與資料配適得越好。
 
 
 Excel驗證
