--- a/HW1207/08_蕭宇辰/CH12.02_Q16.md
+++ b/HW1207/08_蕭宇辰/CH12.02_Q16.md
@@ -33,9 +33,9 @@ c. 建構該回歸的變異數分析表（ANOVA）。
 
 建構Anova表如下
 
-|       | DF    | SS | MS |
-| ----  | --    | -- | -- |
-| Reg   | 1     | 12.25  | 12.25  |
+|       | DF    | SS | MS | F|
+| ----  | --    | -- | -- |-- |
+| Reg   | 1     | 12.25  | 12.25  | 147.0588
 | Error | 3     | 0.25 |0.0833  |
 | Tatol | 4     | 12.5 |
 
