--- a/HW1207/18_張睿廷/CH12.03_Q10.md
+++ b/HW1207/18_張睿廷/CH12.03_Q10.md
@@ -20,7 +20,7 @@
 >
 ><img width="372" alt="image" src="https://github.com/user-attachments/assets/b9e307c1-7706-44ba-af45-37e73cc5e82b" />
 >
->$t_{STAT}$ = 20.436 > 2.571，落入拒絕域，因此拒絕 $H_{0}$。
+>$t*$ = 20.436 > 2.571，落入拒絕域，因此拒絕 $H_{0}$。
 >
 ><img width="230" alt="image" src="https://github.com/user-attachments/assets/52e51c7e-d78b-4613-a583-ea092da557cb" />
 
