--- a/HW1207/06_陳嘉祥/CH12.03_Q05.md
+++ b/HW1207/06_陳嘉祥/CH12.03_Q05.md
@@ -4,3 +4,45 @@ Title: HW1207_06_Titan(陳嘉祥)
 
 ![CH12 03_Q05](https://github.com/user-attachments/assets/dab3d874-efe3-4967-803d-74a6f76a7c2a)
 
+整理數據
+
+![image](https://github.com/user-attachments/assets/4ddef20e-9efd-4b0d-9b49-6cb9ab05ccdb)
+
+由上述資料知a=3 , b=1.2，計算出 least-square line: $\hat{y}$ = 3 + 1.2 *x
+
+
+用t檢定檢定資料是否存在線性關係
+---
+$H_0$ : $\beta$ = 0
+
+$H_a$ : $\beta$ $\ne$ 0
+
+set $\alpha$ = 0.01 
+
+$t_{STAT}$= $\frac{(b-0)}{\sqrt{\frac{MSE}{S_{xx}}}}$  ~ t(n-2)
+
+經查表 Text book page 692. Table 4: Critical Values of t
+
+df=3 , $t_{0.005}$=5.841
+
+Rejection Region = {t: t $\le$ -5.841 or t $\ge$ 5.841  }
+
+計算統計量
+
+( TotalSS = $S_{yy}$ =16， SSR = $S_{xy}^2$ / $S_{xx}$ = 14.4 ，SSE = TotalSS-SSR =1.6， MSE= SSE /(n-2) = 1.6 / 3 = 0.5333 )
+
+$t^*$ = $(\hat{b}-b_0)$ / $\sqrt{\frac{MSE}{S_{xx}}}$ = (1.2-0) / $\sqrt{\frac{0.5333}{10}}$ = 1.2 / 0.2309 = 5.1963
+
+
+
+統計量並未落在拒絕域中，故我們不拒絕 $H_0$，即無充分證據證明 X和 Y有線性關係
+
+
+建構回歸斜率的 99% 信賴區間。解釋「99% 信心水準」的含義。
+---
+
+99%信賴區間為 b $\pm t_{\alpha / 2} * \sqrt{\frac{MSE}{S_{xx}}}$ with df=n-2=3
+
+信賴區間為 [1.2- 0.2309*5.84 , 1.2+0.2309*5.84 ] = [-0.1485, 2.5485]
+
+即重複抽樣的情況下，有99%的機率此區間包含真實的斜率值
