--- a/HW1207/06_陳嘉祥/CH12.03_Q07.md
+++ b/HW1207/06_陳嘉祥/CH12.03_Q07.md
@@ -4,3 +4,27 @@ Title: HW1207_06_Titan(陳嘉祥)
 
 ![CH12 03_Q07](https://github.com/user-attachments/assets/293feff8-cb80-4469-8455-ce11527dcc3c)
 
+# Coefficient of Determination ($r^2$): Regression Analysis
+
+## (1) 計算平方和
+
+- **總平方和 ($SS_{total}$)**：
+  $SS_{total} = \sum (y_i - \bar{y})^2 = 16.0$
+- **迴歸平方和 ($SS_{regression}$)**：
+  $SS_{regression} = \sum (\hat{y}_i - \bar{y})^2 = 14.4$
+---
+## (2) 決定係數 ($r^2$)
+
+公式：
+$r^2 = \frac{SS_{regression}}{SS_{total}}$
+
+計算：
+$r^2 = \frac{14.4}{16.0} = 0.90$
+---
+## (3) 解釋 $r^2$
+
+- **含義**：
+  決定係數 $r^2 = 0.90$ 表示該線性模型能解釋 90% 的 y 值變異量。剩餘的 10% 是由其他因素或隨機誤差造成的。
+
+- **結論**：
+  該線性模型具有良好的解釋能力，適合作為 x 和 y 關係的預測工具。
