--- a/HW1207/HW1207Q09.md
+++ b/HW1207/HW1207Q09.md
@@ -49,7 +49,7 @@ Because $\alpha$ = 0.05, RR = {t: t $\le$ -2.145 or t $\ge$ 2.145  }
 
 ![image](https://github.com/user-attachments/assets/76125aa0-aa8b-42bc-8d5b-e7466d9e0970)
 
-$t_{STAT}=\frac{(b-0)}{\sqrt{\frac{MSE}{S_{xx}}}}$  ~ t(n-2)
+$t_{STAT}=\frac{(b-0)}{\sqrt{\frac{MSE}{S_{xx}}}}$  ~ $t_{(n-2)}$
 
 $t^*$ = $\frac{(b-0)}{\sqrt{\frac{MSE}{S_{xx}}}}$ = $\frac{( 0.0231-0)}{\sqrt{\frac{0.0004}{340}}}$ = 21.2971
 
