--- a/HW1207/13_陳峻毅/CH12.03_Q05.md
+++ b/HW1207/13_陳峻毅/CH12.03_Q05.md
@@ -31,4 +31,4 @@ $1.2 \pm 5.841 \cdot 0.231 \implies (-0.149, 2.549)$
 ## (3) 解釋「99% 信賴區間」
 
 - **含義**：
-  若重複抽樣並計算多個樣本的斜率，則 99% 的這些信賴區間會包含真實的斜率值。
+  若重複抽樣並計算多個樣本的斜率，則 99% 的比例用這些信賴區間會包含真實的斜率值。
