--- a/HW1207/HW1207Q09.md
+++ b/HW1207/HW1207Q09.md
@@ -66,7 +66,7 @@ $t^*$ is in the rejection region, so we reject $H_0$ which means we have suffici
 | Error | 14     | 0.0052 |0.0004  |
 | Tatol | 15     | 0.1864 |
 
-$F_{state}$ = $\frac{MSR}{MSE}$ ~ F(1,n-2)
+$F_{state}$ = $\frac{MSR}{MSE}$ ~ $F_{(1,n-2)}$
 
 $F^*$ = 0.1812/0.0004 = 453
 
