--- a/HW1207/06_陳嘉祥/CH12.03_Q09.md
+++ b/HW1207/06_陳嘉祥/CH12.03_Q09.md
@@ -62,11 +62,11 @@ $t^*$ is in the rejection region, so we reject $H_0$ which means we have suffici
 
 ## c.
 
-|       | DF    | SS | MS |
-| ----  | --    | -- | -- |
-| Reg   | 1     | 0.1812  | 0.1812  |
-| Error | 14     | 0.0052 |0.0004  |
-| Tatol | 15     | 0.1864 |
+|       | DF    | SS | MS | F |
+| ----  | --    | -- | -- | -- |
+| Reg   | 1     | 0.1812  | 0.1812  | 453  |
+| Error | 14     | 0.0052 |0.0004  |   |
+| Tatol | 15     | 0.1864 |   |   |
 
 $F_{state}$ = $\frac{MSR}{MSE}$ ~ $F_{(1,n-2)}$
 
