--- a/HW1207/HW1207Q07.md
+++ b/HW1207/HW1207Q07.md
@@ -44,4 +44,4 @@ $t^*$ = $(\hat{b}-b_0)$ / $\sqrt{\frac{MSE}{S_{xx}}}$ = (1.2-0) / $\sqrt{\frac{0
 
 信賴區間為 [1.2- 0.2309*5.84 , 1.2+0.2309*5.84 ] = [-0.1485, 2.5485]
 
-即重複抽樣的情況下，有99%的機率此區間包含真實的斜率值
+即重複抽樣的情況下，有99%的機率此公式算出的區間包含真實的斜率值
