--- a/HW1207/08_蕭宇辰/CH12.03_Q09.md
+++ b/HW1207/08_蕭宇辰/CH12.03_Q09.md
@@ -40,9 +40,9 @@ $t_{stat}$ = $(b-0)$ / $\sqrt{\frac{MSE}{S_{xx}}}$ = ( 0.0231-0) / $\sqrt{\frac{
 c. 建構 ANOVA 表格，並使用 F-統計量來回答問題 b。驗證 t-stat的平方是否等於 F。
 ---
 
-|       | DF    | SS | MS |
-| ----  | --    | -- | -- |
-| Reg   | 1     | 0.1812  | 0.1812  |
+|       | DF    | SS | MS | F |
+| ----  | --    | -- | -- | -- |
+| Reg   | 1     | 0.1812  | 0.1812  |494.3926|
 | Error | 14     | 0.0052 |0.0004  |
 | Tatol | 15     | 0.1864 |
 
