--- a/HW1207/06_陳嘉祥/CH12.03_Q10.md
+++ b/HW1207/06_陳嘉祥/CH12.03_Q10.md
@@ -4,51 +4,60 @@ Title: HW1207_06_Titan(陳嘉祥)
 
 ![CH12 03_Q10](https://github.com/user-attachments/assets/2ec457f2-159e-4f14-83f5-d4d4c1c66439)
 
-### 題意：再犯率
-再犯率指的是已被釋放或假釋的犯人再次被送回監獄的現象。以下數據顯示聯邦監獄中釋放犯人的組別中位年齡（𝑥）及被逮捕再犯的百分比（𝑦）。請利用 MS Excel 的輸出結果回答下列問題。
+### a. 找出最小平方法回歸線
+回歸線的方程為：
+$\hat{y} = a + bx$
+由表格中的係數可得：
+- 截距 (a) = 93.617
+- 斜率 (b) = -1.251
 
-### a.求出描述「被捕百分比」與「群體年齡中位數」之間關係的least-squares line。
->
-><img width="371" alt="image" src="https://github.com/user-attachments/assets/4c862d92-aefe-4b32-b12c-fed1860a62b0" />
->
->根據題給的數據得出，截距: a = 93.617，斜率: b = -1.251，帶入 y=a+bx
->
->least-squares line: $\hat{y}$ = 93.617 - 1.251*x
->
-### b.資料是否提供充分證據顯示 x 和 y 存在線性關係？使用 t-統計量並在 5% 顯著水準下進行檢定。
->
->$H_{0}: \beta = 0$  （無線性關係）
->
->$H_{1}: \beta \neq 0$  （存在線性關係）
->
->$\alpha$=0.05
->
-><img width="372" alt="image" src="https://github.com/user-attachments/assets/b9e307c1-7706-44ba-af45-37e73cc5e82b" />
->
->$t*$ = 20.436 > 2.571，落入拒絕域，因此拒絕 $H_{0}$，即有顯著證據證明x和y有線性關係
->
-><img width="230" alt="image" src="https://github.com/user-attachments/assets/52e51c7e-d78b-4613-a583-ea092da557cb" />
+因此，回歸線方程為：
+$\hat{y} = 93.617 - 1.251x$
 
-### c.建構斜率的 95% 信賴區間
->
->$b \pm t_{(\alpha/2)} \sqrt{\frac{\text{MSE}}{S_{xx}}}$ , with $df$ = $n$ - 2 
->
->斜率 $b$= -1.251
->  
->$\text{MSE} = 9.999$
->
->$S_{xx} = \sum (x - \bar{x})^2 = \sum x^2 - \frac{(\sum x)^2}{n} = 700$
->
->
->自由度 $n - 2$ = $7 - 2 = 5$
->
->t 值（95% 信賴水準， $\alpha = 0.05$）：查 t 分布表，當自由度 $5$ 時， $t_{0.025} \approx 2.571$
->
->$-1.251 \pm 2.571 \sqrt{\frac{9.999}{700}} = -1.251 \pm 0.3073$
->
->故信賴區間上下界為 [-1.5583 , -0.9437]
+---
+### b. 檢定 x 和 y 是否有線性關係
+假設檢定：
+- $H_0: \beta = 0$（無線性關係）
+- $H_a: \beta \neq 0$（有線性關係）
 
-### d.計算決定係數( $R^2$ )，並說明其統計意涵。
-><img width="128" alt="image" src="https://github.com/user-attachments/assets/07fbc678-ae0d-4fa4-a1a7-2852c275234c" />
->
->由表中得知， $R^2$ = 95.64%，表示這個模型可以解釋 y 有 95.64% 的變化是由 x 所造成的。
+檢定統計量：\
+$t_{stat} = \frac{\text{估計的斜率} \, (\text{b})}{\sqrt{\frac{MSE}{S_{xx}}}}$ = $\frac{-1.251}{0.120} = -10.471$
+
+- 自由度 (df) = 7 - 2 = 5 
+- P -值：表格中已給出為 0.000 
+
+結論：在顯著性水平 $\alpha = 0.05$ 下，因為 P < 0.05，拒絕 $H_0$。結果表明 x 和 y 存在顯著的線性關係。
+
+---
+### c. 建立斜率的 95% 信賴區間
+斜率 ($b_1$) 的信賴區間計算公式：
+$t_{\alpha / 2}$ * $\sqrt{\frac{MSE}{S_{xx}}}$
+
+
+其中：
+- b = -1.251
+- $SE = 0.120$
+- t*：根據自由度 df = 5 和 95% 信心水準，查 t-表得 $t_{\alpha / 2}$* $\approx 2.571$
+
+
+代入公式：\
+b $\pm t_{\alpha / 2} * \sqrt{\frac{MSE}{S_{xx}}}$ \
+$\text{下限} = -1.251 - (2.571 \cdot 0.120) = -1.559$\
+$\text{上限} = -1.251 + (2.571 \cdot 0.120) = -0.943$
+
+因此，95% 信賴區間為：
+[-1.559, -0.943]
+
+---
+### d. 解釋決定係數 ($R^2$)
+表格中的 $R^2$ 值為：
+$R^2 = 0.9564$
+
+解釋： $R^2$表示模型可以解釋 95.64% 的數據變異性。這說明回歸模型的解釋力非常強，絕大多數的 y 變異可以由 x 解釋。
+
+---
+### 總結
+1. 回歸線方程為 y = 93.617 - 1.251x。
+2. 根據 t 檢定和 P 值，證明 x 和 y 之間存在顯著的線性關係。
+3. 斜率的 95% 信賴區間為 [-1.559, -0.943]。
+4. 決定係數 $R^2$ = 0.9564，表明模型具有非常高的解釋力。
