--- a/HW1207/10_蔡佳媛/CH12.03_Q10_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.03_Q10_10_Cathy.md
@@ -21,9 +21,12 @@ $H_{1}: \beta \neq 0$ (Slope of the line is not 0)
 
 two-tail test, $\alpha$=0.05  
 
-Reject region: The $t_{STAT}$, 20.436, is greater than 2.571, which falls into the rejection region. Therefore, $H_{0}$ is rejected. 
+Reject region: The $t_{STAT}$, -10.471, is smaller than -2.571, which falls into the rejection region. Therefore, $H_{0}$ is rejected. 
 
 p-value: The p-value is 0, which is less than 0.025, $H_{0}$ is rejected
+
+![image](https://github.com/user-attachments/assets/4cef6c6d-5951-4c55-9702-8327206da508)
+
 
 ![image](https://github.com/user-attachments/assets/4af7a966-a049-4ddd-a1b4-e6c815f98808)
 
