--- a/HW1207/06_陳嘉祥/CH12.05_Q03&05.md
+++ b/HW1207/06_陳嘉祥/CH12.05_Q03&05.md
@@ -4,3 +4,62 @@ Title: HW1207_06_Titan(陳嘉祥)
 
 ![CH12 05_Q03 05](https://github.com/user-attachments/assets/1424f79f-7ef8-454f-88a0-d11c4926a58d)
 
+### 3. 計算 y平均值的 90% 信賴區間
+
+已知條件：
+- n = 10
+- SSE = 24
+- $\sum x_i = 59$
+- $\sum x_i^2 = 397$
+- $\hat{y} = 0.074 + 0.46x$，當 $x_0 = 5$
+- 信賴水準為 90%
+
+#### 計算步驟：
+1. **計算 $\hat{y}_0$ 的值：**
+   $\hat{y}_0 = 0.074 + 0.46(5) = 2.374$
+
+2. **計算標準誤差 MSE：**\
+   $MSE = \sqrt{\frac{SSE}{n-2}} = \sqrt{\frac{24}{10-2}} = \sqrt{3} \approx 1.732$
+
+3. **計算 $\text{SE}_{\hat{y}_0}$ 的值（平均值的標準誤差）：**
+   $\text{SE}_{\hat{y}_0} = s \sqrt{\frac{1}{n} + \frac{(x_0 - \bar{x})^2}{\sum (x_i^2) - \frac{(\sum x_i)^2}{n}}}$
+   其中：
+   - $\bar{x} = \frac{\sum x_i}{n} = \frac{59}{10} = 5.9$
+   - $x_0 = 5$
+
+   計算分母項：
+   $\sum x_i^2 - \frac{(\sum x_i)^2}{n} = 397 - \frac{59^2}{10} = 397 - 348.1 = 48.9$
+
+   計算 :\
+   $\text{SE}_{\hat{y}_0} = 1.732 \cdot \sqrt{\frac{1}{10} + \frac{(5 - 5.9)^2}{48.9}}\approx 0.5915$
+
+
+5. **查找 $t^*$ 值：**
+   在自由度 n - 2 = 8 和 90% 信賴水準下，從 t-分布表查得 t* $\approx 1.860$。
+
+6. **計算信賴區間：**
+![圖片](https://github.com/user-attachments/assets/9100d2a7-3330-46c2-a55c-6aecac656556)
+
+$\text{CI} = 2.374 \pm 1.860 \cdot 0.5915 \approx 2.374 \pm 1.099$
+
+$\text{CI} = [1.275, 3.473]$
+
+結果：y 的 90% 信賴區間為 [1.275, 3.473]
+
+---
+
+### 5. 計算單個 y  的 90% 預測區間
+
+當 $x_0$ = 5時， $\hat{y_0}$ = 2.374
+
+預測區間為 $\hat{y_0} \pm t_{(n-2),\frac{\alpha}{2}} * \sqrt{MSE(1+\frac{1}{n}+\frac{(x_0-\bar{x})^2}{S_{xx}})} $ 
+
+Sxx = 48.9，1/n=0.1， $(x_0-\bar{x})^2$ = 0.81，SSE=24，MSE=3
+
+= 2.374 $\pm$ 1.86 * $\sqrt{(3 *(1+1/10+0.81/48.9) )}$ =2.374 $\pm$ 3.404
+
+預測區間為 [-1.0302 , 5.7782 ]
+
+---
+### 比較信賴區間與預測區間
+預測區間 [-1.027, 5.775] 比信賴區間 [1.275, 3.473] 更寬，這是預測區間的特性，因為單個觀測值的變異性比平均值大。
