--- a/HW1207/HW1207Q05.md
+++ b/HW1207/HW1207Q05.md
@@ -44,7 +44,7 @@ MSE = SSE / $df_{error}$ = 12.7783 / 4 = 3.1946
 
 $R^2= \frac{SSR}{Total SS}=\frac{59.44}{72.22}=0.823$
 
-當 $R^2$ 越接近1 反映了自變數（收入）能夠解釋因變數（BMI）變異的比例。
+當 $R^2$ 越接近1 反映這個迴歸中的自變數（收入）能夠解釋因變數（BMI）變異的比例。
 
 This model is woking well!
 
