--- a/HW1207/18_張睿廷/CH12.03_Q10.md
+++ b/HW1207/18_張睿廷/CH12.03_Q10.md
@@ -13,17 +13,16 @@
 >
 ### b.資料是否提供充分證據顯示 x 和 y 存在線性關係？使用 t-統計量並在 5% 顯著水準下進行檢定。
 >
->$H_{0}: \beta = 0$  
->$H_{1}: \beta \neq 0$
+>$H_{0}: \beta = 0$  （無線性關係）
+>
+>$H_{1}: \beta \neq 0$  （存在線性關係）
 >
 >$\alpha$=0.05
 >
-><img width="372" alt="image" src="https://github.com/user-attachments/assets/b9e307c1-7706-44ba-af45-37e73cc5e82b" />
+><img width="201" alt="image" src="https://github.com/user-attachments/assets/2d94a920-23ec-4516-ac32-dd47a1269780" />
 >
->$t*$ = 20.436 > 2.571，落入拒絕域，因此拒絕 $H_{0}$。
+>$p-value$ = 0，因此拒絕 $H_{0}$，即有顯著證據證明x和y有線性關係
 >
-><img width="230" alt="image" src="https://github.com/user-attachments/assets/52e51c7e-d78b-4613-a583-ea092da557cb" />
-
 ### c.建構斜率的 95% 信賴區間
 >
 >$b \pm t_{(\alpha/2)} \sqrt{\frac{\text{MSE}}{S_{xx}}}$ , with $df$ = $n$ - 2 
@@ -46,5 +45,4 @@
 ### d.計算決定係數( $R^2$ )，並說明其統計意涵。
 ><img width="128" alt="image" src="https://github.com/user-attachments/assets/07fbc678-ae0d-4fa4-a1a7-2852c275234c" />
 >
->由表中得知， $R^2$ = 95.64%，表示這個模型可以解釋 y 有 95.64% 的變化是由 x 所造成的。
-
+>由表中得知， $R^2$ = 95.64%，表示這個模型可以解釋的「變異」占「總變異」的95.64%。
