--- a/HW1207/HW1207Q01.md
+++ b/HW1207/HW1207Q01.md
@@ -42,3 +42,4 @@
 >
 >![image](https://github.com/user-attachments/assets/6cf43380-64e1-4c6a-8ed1-ee81e3bd14de)
 
+reviewed by 黃馨霈 20241221 $\textbf{\textcolor{red}{score: 100}}$
