--- a/HW1207/HW1207Q02.md
+++ b/HW1207/HW1207Q02.md
@@ -47,3 +47,4 @@ The value of the slope differs from the conclusion in part b because the sample 
   
 According to regression line: $\hat{y} = 29.6076 + 0.8239x$, the predicted height of the person would be 158.9599 centimeters.    
   
+reviewed by 黃馨霈 20241221 $\textbf{\textcolor{red}{score: 100}}$
