--- a/HW1207/HW1207Q03.md
+++ b/HW1207/HW1207Q03.md
@@ -6,3 +6,4 @@ ans:
 	
 ![image](https://github.com/user-attachments/assets/0b9573ce-0e56-46af-80db-3bbcfaf8a5fd)
 
+reviewed by 黃馨霈 20241221 $\textbf{\textcolor{red}{score: 100}}$
