--- a/HW1207/HW1207Q04.md
+++ b/HW1207/HW1207Q04.md
@@ -79,3 +79,4 @@ SSE:3.想知道整體而言組內的離散程度(希望組內越近越好)
 
 https://belleaya.pixnet.net/blog/post/30754486
 
+reviewed by 黃馨霈 20241221 $\textbf{\textcolor{red}{score: 100}}$
