--- a/HW1207/HW1207Q05.md
+++ b/HW1207/HW1207Q05.md
@@ -1,4 +1,4 @@
-學號：513717030  陳峻毅
+<img width="778" alt="image" src="https://github.com/user-attachments/assets/2a533033-5a87-4129-91ef-a8aa57089f58" />學號：513717030  陳峻毅
 
 ![393916822-6ee099f5-2d72-41d0-932d-eb255bfe5385](https://github.com/user-attachments/assets/174bda0f-5361-4170-9fd9-c75b2e7c09eb)
 
@@ -51,3 +51,4 @@ This model is woking well!
 ## 解釋
 此模型表明收入對 BMI 具有一定的解釋能力，但仍存在其他可能影響 BMI 的因素。
 
+reviewed by 黃馨霈 20241221 $\textbf{\textcolor{red}{score: 100}}$
