--- a/HW1207/HW1207Q06.md
+++ b/HW1207/HW1207Q06.md
@@ -47,3 +47,5 @@ SSE = Total SS - SSR = $12.5 - 12.25 = 0.25$
 | Regression | 1 |12.25| 12.25|147.0588|  
 | Error      | 3 | 0.25| 0.0833||  
 | Total      | 4 |12.5 ||  
+
+reviewed by 黃馨霈 20241221 $\textbf{\textcolor{red}{score: 100}}$
