--- a/HW1207/HW1207Q08.md
+++ b/HW1207/HW1207Q08.md
@@ -28,3 +28,5 @@ Excel驗證
 ![image](https://github.com/user-attachments/assets/53bb19ed-a98f-41bc-b7f5-5100f70ec46f)
 
 ![image](https://github.com/user-attachments/assets/ff9f4cbc-8f77-47b1-b23e-c2c118d1feb4)
+
+reviewed by 黃馨霈 20241221 $\textbf{\textcolor{red}{score: 100}}$
