--- a/HW1207/HW1207Q09.md
+++ b/HW1207/HW1207Q09.md
@@ -85,3 +85,4 @@ that can be explained by using the explanatory
 variable x in the model.  
 Ch12. page40.
 
+reviewed by 黃馨霈 20241221 $\textbf{\textcolor{red}{score: 100}}$
